mongo-c-driver (1.16.1-2) UNRELEASED; urgency=medium

  * Add libmongoc-dev dependency on libzstd-dev

 -- Roberto C. Sanchez <roberto@connexer.com>  Mon, 30 Mar 2020 13:29:39 -0400

mongo-c-driver (1.16.1-1) unstable; urgency=medium

  * New upstream release
  * Update copyright information for vendored Sphinx theme
  * Update to Standards-Version 4.5.0 (no changes)

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 06 Feb 2020 14:30:48 -0500

mongo-c-driver (1.16.0-1) unstable; urgency=medium

  * New upstream release
  * Build with zstd support
  * Drop A. Jesse Jiryu Davis as uploader

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 21 Jan 2020 14:54:52 -0500

mongo-c-driver (1.15.2-1) unstable; urgency=medium

  * New upstream release
  * Update to Standards-Version 4.4.1 (no changes)

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 07 Nov 2019 15:43:02 -0500

mongo-c-driver (1.15.1-1) unstable; urgency=medium

  * New upstream release

 -- Roberto C. Sanchez <roberto@connexer.com>  Fri, 30 Aug 2019 22:14:59 -0400

mongo-c-driver (1.15.0-1) unstable; urgency=medium

  * New upstream release

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 13 Aug 2019 19:25:36 -0400

mongo-c-driver (1.14.1-1) unstable; urgency=medium

  * New upstream release
  * Update to Standards-Version 4.4.0 (no changes)

 -- Roberto C. Sanchez <roberto@connexer.com>  Fri, 09 Aug 2019 16:43:32 -0400

mongo-c-driver (1.14.0-1) unstable; urgency=medium

  * New upstream release
  * Make build reproducible; thanks to Chris Lamb for the patch
    (Closes: #920411)
  * Drop implicit libraries from pkg-config script

 -- Roberto C. Sanchez <roberto@connexer.com>  Fri, 22 Feb 2019 22:37:09 -0500

mongo-c-driver (1.13.1-1) unstable; urgency=medium

  * New upstream release
  * Update to Standards-Version 4.3.0 (no changes)
  * debian/patches/uninstall_destdir.patch: drop, included upstream

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 24 Jan 2019 20:44:39 -0500
